--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,3 +1,20 @@
-<h3>Welcome!</h3>
+<%= render "shared/content_title", title: "All Posts" %>
 
-<p>This is the Postit template. You've access the PostsController, index action. This is the index template. Find me under app/views/posts folder.</p>
+<% @posts.each do |p| %>
+  <div class="row">
+    <div class="span8 well">
+      <%= render p.categories %>
+      <h4><%= link_to p.title, post_path(p) %></h4>
+      <p><%= p.description %></p>
+      <p>
+        <span class="quiet">Posted by </span><%= p.user.username %>
+        <small>at <%= p.created_at %></small>
+      </p>
+      <small>
+        <span>
+          <%= link_to("#{p.comments.size} comments", post_path(p)) %>
+        </span>
+      </small>
+    </div>
+  </div>
+<% end %>
