Beginning to add forms

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -5,5 +5,6 @@
 <p><%= @post.user.username %></p>
 <h5>Comments:</h5>
 <% @post.comments.each do |c| %>
+  <p><%= c.user.username %> says:</p>
   <p><%= c.body %></p>
 <% end %>
