--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,41 +1,3 @@
-<h2>Create a New Post</h2>
+<h4>Create a New Post</h4>
 
-<h4>Pure HTML:</h4>
-
-<form action="/posts" method="POST">
-	Title: <input type="text" name="article_title" />
-	<br />
-	<input type="submit" class="btn btn-primary" />
-</form>
-
-<h4>Rails form helper</h4>
-
-<%= form_tag '/posts' do %>
-	<%= label_tag :title %>
-	<%= text_field_tag :title %>
-
-	<%= label_tag :url %>
-	<%= text_field_tag :url %>
-
-	<%= label_tag :description %>
-	<%= text_field_tag :description %>
-
-	<%= submit_tag "Create Post", class: 'btn btn-primary' %>
-<% end %>
-
-<h4> Rails model-backed form helpers </h4>
-
-<%= form_for @post do |f| %>
-	<%= f.label :title %>
-	<%= f.text_field :title %>
-	<br />
-	<%= f.label :url %>
-	<%= f.text_field :url %>
-	<br />
-	<%= f.label :description %>
-	<%= f.text_field :description %>
-	<br />
-	<%= f.submit "Create Post", class: 'btn btn-primary' %>
-<% end %>
-
-
+<%= render "form" %>
