--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,25 +1,5 @@
 <%= render "shared/content_title", title: "All Posts" %>
 
-<% @posts.each do |p| %>
-  <div class="row">
-    <div class="span8 well">
-      <%= render p.categories %>
-      <h4><%= link_to p.title, post_path(p) %></h4>
-      <p><%= p.description %></p>
-      <p>
-        <span class="quiet">Posted by </span><%= p.user.username %>
-        <small>at <%= p.created_at %></small>
-      </p>
-      <p>
-        <span>
-          <%= link_to("Edit", edit_post_path(p.id)) %>
-        </span>
-      </p>
-      <small>
-        <span>
-          <%= link_to("#{p.comments.size} comments", post_path(p)) %>
-        </span>
-      </small>
-    </div>
-  </div>
+<% @posts.each do |post| %>
+  <%= render post %>
 <% end %>
