--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,25 +1,22 @@
+<%= render "shared/errors", entity: @post %>
 
-<% if @post.errors.any? %>
-<div class="alert alert-error">
-  <h4> There were some errors. </h4>
-  <br />
-  <ul>
-  <% @post.errors.full_messages.each do |error| %>
-    <li><%= error %></li>
+<div class="well">
+  <%= form_for @post do |f| %>
+    <div class="control-group">
+      <%= f.label :title %>
+      <%= f.text_field :title %>
+    </div>
+
+    <div class="control-group">
+    <%= f.label :url %>
+    <%= f.text_field :url %>
+    </div>
+
+    <div class="control-group">
+    <%= f.label :description %>
+    <%= f.text_area :description, rows: 5 %>
+    </div>
+
+    <%= f.submit(@post.new_record? ? "Create Post" : "Update Post", class: 'btn btn-primary') %>
   <% end %>
-  </ul>
 </div>
-<% end %>
-
-<%= form_for @post do |f| %>
-  <%= f.label :title %>
-  <%= f.text_field :title %>
-  <br />
-  <%= f.label :url %>
-  <%= f.text_field :url %>
-  <br />
-  <%= f.label :description %>
-  <%= f.text_field :description %>
-  <br />
-  <%= f.submit "Create Post", class: 'btn btn-primary' %>
-<% end %>
