New comment form w/dummy user

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -8,7 +8,16 @@
 <%= render "shared/content_title", title: @post.title %>
 <p><%= @post.description %></p>
 <p><%= @post.user.username %></p>
+<h5>Create a comment:</h5>
+<%= render 'shared/errors', entity: @comment %>
+<%= form_for [@post, @comment] do |f| %>
+	<%= f.text_area :body %>
+	<br />
+	<%= f.submit "Create comment", class: "btn btn-primary" %>
+<% end %>
+
 <h5>Comments:</h5>
+
 <% @post.comments.each do |c| %>
   <p><%= c.user.username %> says:</p>
   <p><%= c.body %></p>
