--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -8,10 +8,10 @@
 <%= render "shared/content_title", title: @post.title %>
 <p><%= @post.description %></p>
 <p><%= @post.user.username %></p>
-<h5>Create a comment:</h5>
 <%= render 'shared/errors', entity: @comment %>
 <%= form_for [@post, @comment] do |f| %>
-	<%= f.text_area :body %>
+	<%= f.label :body, "Leave a comment" %>
+	<%= f.text_area :body, rows: 3, class: 'span4' %>
 	<br />
 	<%= f.submit "Create comment", class: "btn btn-primary" %>
 <% end %>
@@ -19,6 +19,10 @@
 <h5>Comments:</h5>
 
 <% @post.comments.each do |c| %>
-  <p><%= c.user.username %> says:</p>
-  <p><%= c.body %></p>
+	<div class="well span8">
+	  <em><%= c.body %></em>
+	  <br />
+	  <span class="quiet">by </span><%= link_to c.user.username, '' %>
+    <small><%= friendly_date(c.created_at) %></small>
+	 </div>
 <% end %>
