--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,6 +1,8 @@
-<p class="pull-right">
-	<%= link_to "edit this post", edit_post_path(@post) %>
-</p>
+<% if logged_in? %>
+	<p class="pull-right">
+		<%= link_to "edit this post", edit_post_path(@post) %>
+	</p>
+<% end %>
 <p>
 	<%= render @post.categories %>
 </p>
@@ -8,12 +10,14 @@
 <%= render "shared/content_title", title: @post.title %>
 <p><%= @post.description %></p>
 <p><%= @post.user.username %></p>
-<%= render 'shared/errors', entity: @comment %>
-<%= form_for [@post, @comment] do |f| %>
-	<%= f.label :body, "Leave a comment" %>
-	<%= f.text_area :body, rows: 3, class: 'span4' %>
-	<br />
-	<%= f.submit "Create comment", class: "btn btn-primary" %>
+<% if logged_in? %>
+	<%= render 'shared/errors', entity: @comment %>
+	<%= form_for [@post, @comment] do |f| %>
+		<%= f.label :body, "Leave a comment" %>
+		<%= f.text_area :body, rows: 3, class: 'span4' %>
+		<br />
+		<%= f.submit "Create comment", class: "btn btn-primary" %>
+	<% end %>
 <% end %>
 
 <h5>Comments:</h5>
