--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -4,7 +4,7 @@
     <h4><%= link_to post.title, fix_url(post.url) %></h4>
     <p><%= post.description %></p>
     <p>
-      <span class="quiet">Posted by </span><%= post.user.username %>
+      <span class="quiet">Posted by </span><%= link_to post.user.username, user_path(post.user) %>
       <small><%= friendly_date(post.created_at) %></small>
     </p>
     <small>
