--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -23,10 +23,5 @@
 <h5>Comments:</h5>
 
 <% @post.comments.each do |c| %>
-	<div class="well span8">
-	  <em><%= c.body %></em>
-	  <br />
-	  <span class="quiet">by </span><%= link_to c.user.username, '' %>
-    <small><%= friendly_date(c.created_at) %></small>
-	 </div>
+	<%= render "comments/comment", comment: c %>
 <% end %>
